# ShimmerWorld

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  backup.editorconfig  vcpkg.json
.vcpkg/ports/fbxsdk/: fbxsdk-config.cmake  portfile.cmake  vcpkg.json  vcpkg_find_fbxsdk.cmake
.vcpkg/ports/imgui/: 00-window-context-hook.patch  01-fitting-policy-docking.patch  portfile.cmake
.vcpkg/ports/imgui-knobs/: CMakeLists.txt  fix_lib_export.patch  portfile.cmake  vcpkg.json
.vcpkg/ports/imspinner/: CMakeLists.txt  portfile.cmake  vcpkg.json
.vcpkg/ports/libgit2cpp/: CMakeLists.txt  portfile.cmake  vcpkg.json
.vcpkg/ports/nfd/: 00_config_locations.patch  portfile.cmake  vcpkg.json
.vcpkg/ports/ogre/: assimp-postprocess-flags.patch  fix-dependencies.patch  portfile.cmake  vcpkg.json
.vcpkg/ports/protobuf/: map-field-constinit.patch  portfile.cmake
.vcpkg/triplets/: x64-windows-custom.cmake  x64-windows.cmake
cmake/git/: CheckGit.cmake  git_version.cpp.in  git_version.h
cmake/vcpkg/: AutoVcpkg.cmake  Include.cmake
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/results/: Result.hpp
src/common/strings/: String.cpp  String.hpp
src/common/threading/: TaskResult.hpp
src/shared/: CMakeLists.txt
src/shared/DeSer/: FlecsVector.hpp
src/shared/app/: Application.cpp  Application.hpp
src/shared/config/: Config.cpp  Config.hpp  ConfigComponents.hpp
src/shared/crashhandler/: CrashHandler.cpp  CrashHandler.hpp
src/shared/filesystem/: Filesystem.cpp  Filesystem.hpp
src/shared/hash/: Hash.hpp
src/shared/logging/: LevelsCategories.hpp  Logging.cpp  Logging.hpp
src/tests/: CMakeLists.txt
src/tests/config/: ConfigTest.cpp
src/tests/logging/: LoggingTest.cpp
src/world/: CMakeLists.txt  main.cpp
src/worldbroker/: CMakeLists.txt  main.cpp
src/worldbroker/app/: Application.cpp  Application.hpp
